# karczma

./: .gitignore  CMakeLists.txt  Instrukcja obsługi.docx  LICENSE  config.h  i18n.cpp  main.cpp  username.cpp  utils.cpp  utils.h
docs/: Instrukcja obsługi.docx  README.md
models/: deliveryData.cpp  orderItem.cpp  orderItem.h  restaurantDetails.h
static/: restaurant_details.json  restaurant_menu.json
views/: author.cpp  delivery_address.cpp  delivery_choice.cpp  food_details.cpp  menu.cpp  order.cpp  restaurant_details.cpp  summary.cpp  table_choice.cpp  username.cpp  views.h
